2.3/service-tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30007
